.argo/production/https-redirect.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: main-website
spec:
  redirectScheme:
    permanent: true
    scheme: https
