.argo/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: my-letsencrypt-prod
  name: frontend-ingress
  namespace: main-website
spec:
  rules:
    - host: robocup.de
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/"
            backend:
              service:
                name: frontend
                port:
                  number: 3000
    - host: 2027.robocup.org
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/"
            backend:
              service:
                name: frontend
                port:
                  number: 3000
  tls:
    - hosts:
        - robocup.de
      secretName: website-frontend-secret
    - hosts:
        - 2027.robocup.org
      secretName: website-frontend-wm-secret
